--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Paste a public 3D model link and get a custom 3D printing quote by email." />
   <link rel="stylesheet" href="/style.css" />
+
+  <!-- Home-only layout: form + supported sites side-by-side on wide screens -->
+  <style>
+    .home-split{
+      display:grid;
+      grid-template-columns: 1.15fr .85fr;
+      gap: 16px;
+      align-items: start;
+      margin-top: 18px;
+    }
+    @media (max-width: 900px){
+      .home-split{ grid-template-columns: 1fr; }
+    }
+
+    .sites-card{ padding: 20px; }
+    .sites-title{
+      margin: 0 0 6px;
+      font-size: 1.05rem;
+      letter-spacing: -.01em;
+    }
+    .sites-sub{
+      margin: 0 0 12px;
+      color: var(--muted);
+      font-size: .95rem;
+      line-height: 1.4;
+    }
+    .sites-list{
+      display:flex;
+      flex-wrap:wrap;
+      gap: 10px;
+    }
+
+    .site-pill{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding: 10px 12px;
+      border-radius: 999px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.70);
+      color: var(--muted);
+      text-decoration:none;
+      font-weight: 750;
+      font-size: .9rem;
+      transition: transform var(--transition), background var(--transition), box-shadow var(--transition);
+      white-space: nowrap;
+    }
+    .site-pill:hover{
+      transform: translateY(-1px);
+      background:#fff;
+      box-shadow: var(--shadowSoft);
+      color: var(--text);
+    }
+
+    .site-empty{
+      border: 1px dashed rgba(15,23,42,.20);
+      border-radius: 16px;
+      padding: 12px;
+      color: var(--muted);
+      font-size: .92rem;
+      line-height: 1.4;
+      background: rgba(255,255,255,.55);
+    }
+  </style>
 </head>
 
 <body>
@@ -36,44 +100,56 @@
           </p>
         </section>
 
-        <section class="card form-card">
-          <form class="stl-form" action="request.html" method="GET">
-            <label for="stlLink" class="field-label">Model link</label>
+        <!-- ✅ Split section: Form (left) + Supported Sites (right) -->
+        <section class="home-split">
 
-            <input
-              type="url"
-              id="stlLink"
-              name="link"
-              class="field-input"
-              placeholder="https://..."
-              required
-            />
+          <!-- Form card -->
+          <section class="card form-card" style="margin:0;">
+            <form class="stl-form" action="request.html" method="GET">
+              <label for="stlLink" class="field-label">Model link</label>
 
-            <button type="submit" class="btn-primary btn-block">
-              Get Quote
-            </button>
+              <!-- ✅ No STLFlix default / no STLFlix placeholder -->
+              <input
+                type="url"
+                id="stlLink"
+                name="link"
+                class="field-input"
+                placeholder="https://..."
+                required
+              />
 
-            <div id="siteOptionsWrap" style="margin-top:6px;">
-              <div style="text-align:center;color:var(--muted);font-size:.88rem;margin:10px 0 10px;">
-                Browse supported libraries (opens in a new tab):
-              </div>
+              <button type="submit" class="btn-primary btn-block">
+                Get Quote
+              </button>
 
-              <div id="siteOptions"
-                   style="display:flex;flex-wrap:wrap;gap:10px;justify-content:center;">
-                <!-- populated by JS -->
-              </div>
-
-              <p id="siteFallback"
-                 class="small-note"
-                 style="display:none;margin-top:12px;">
-                Supported sources will appear here once configured. You can still paste a public link above.
+              <p class="small-note" style="margin-top:6px;">
+                Choose a supported site on the right to browse models, then paste the model link here.
               </p>
+
+              <p class="small-note">
+                Don’t see your library yet? Paste the link anyway — I’ll confirm licensing/compatibility before printing.
+              </p>
+            </form>
+          </section>
+
+          <!-- Supported sites card -->
+          <aside class="card sites-card">
+            <h2 class="sites-title">Supported sites</h2>
+            <p class="sites-sub">
+              Browse supported model libraries (opens in a new tab). This list is managed from the Admin page.
+            </p>
+
+            <div class="sites-list" id="sitesList">
+              <!-- populated by JS -->
             </div>
 
-            <p class="small-note">
-              Don’t see your library yet? Paste the link anyway — I’ll confirm licensing/compatibility before printing.
-            </p>
-          </form>
+            <div class="site-empty" id="sitesEmpty" style="display:none;margin-top:12px;">
+              No supported sites have been added yet.
+              <br/>
+              Once you add them in <strong>Admin → Supported Sites</strong>, they’ll show up here automatically.
+            </div>
+          </aside>
+
         </section>
 
         <section class="how-grid" id="how">
@@ -116,44 +192,45 @@
   </div>
 
   <script>
-    async function loadSites() {
-      const wrap = document.getElementById('siteOptions');
-      const fallback = document.getElementById('siteFallback');
+    async function loadSupportedSites(){
+      const list = document.getElementById('sitesList');
+      const empty = document.getElementById('sitesEmpty');
 
-      try {
+      list.innerHTML = '';
+      empty.style.display = 'none';
+
+      try{
         const res = await fetch('/api/public/sites', { headers: { 'Accept': 'application/json' } });
         const data = await res.json().catch(() => ({}));
-        const sites = (data && data.sites) ? data.sites : [];
+        const sites = Array.isArray(data.sites) ? data.sites : [];
 
-        wrap.innerHTML = '';
-
-        if (!Array.isArray(sites) || sites.length === 0) {
-          fallback.style.display = 'block';
+        if (!sites.length){
+          empty.style.display = 'block';
           return;
         }
 
-        fallback.style.display = 'none';
-
-        for (const s of sites) {
+        // Render each site as a pill (simple + clean)
+        sites.forEach((s) => {
           const a = document.createElement('a');
-          a.className = 'btn-primary btn-sm';
+          a.className = 'site-pill';
           a.href = s.browseUrl || '#';
           a.target = '_blank';
           a.rel = 'noopener noreferrer';
-          a.style.textDecoration = 'none';
           a.textContent = s.name ? `Browse ${s.name}` : 'Browse';
-          if (!s.browseUrl) {
-            a.style.opacity = '0.6';
+
+          if (!s.browseUrl){
+            a.style.opacity = '0.55';
             a.style.pointerEvents = 'none';
           }
-          wrap.appendChild(a);
-        }
-      } catch (e) {
-        fallback.style.display = 'block';
+
+          list.appendChild(a);
+        });
+      }catch(err){
+        empty.style.display = 'block';
       }
     }
 
-    loadSites();
+    loadSupportedSites();
   </script>
 </body>
 </html>
